--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.l_tech">
+    package="com.example.rentomatic">
    <application
-        android:label="l_tech"
+        android:label="rentomatic"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
