--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   ms_undraw: ^3.0.1+1
   firebase_core: ^1.8.0
   firebase_auth: ^3.1.4
+  cloud_firestore: ^2.5.4
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_lints: ^1.0.0
