--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,6 +47,7 @@ android {
         applicationId "com.l_tech.rentomatic"
         minSdkVersion 19
         targetSdkVersion 30
+        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -66,4 +67,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.multidex:multidex: 2.0.1'
 }
