--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,13 @@ dependencies:
   google_fonts: ^2.1.0
   hooks_riverpod: ^0.14.0+5
   line_icons: ^2.0.1
-  splashscreen: ^1.3.5
   ms_undraw: ^3.0.1+1
   firebase_core: ^1.8.0
   firebase_auth: ^3.1.4
   cloud_firestore: ^2.5.4
   fluttertoast: ^8.0.8
+  rive_splash_screen: ^0.1.0
+  lottie: ^1.2.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -33,3 +34,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+        - assets/animations/loading.json
