--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,30 +9,34 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^2.5.4
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.1.4
+  firebase_core: ^1.8.0
   flex_color_scheme: ^3.0.1
   flutter:
     sdk: flutter
   flutter_bluetooth_serial: ^0.4.0
   flutter_hooks: ^0.18.0
+  fluttertoast: ^8.0.8
   get: ^4.3.8
   google_fonts: ^2.1.0
   hooks_riverpod: ^0.14.0+5
+  http: ^0.13.4
   line_icons: ^2.0.1
-  ms_undraw: ^3.0.1+1
-  firebase_core: ^1.8.0
-  firebase_auth: ^3.1.4
-  cloud_firestore: ^2.5.4
-  fluttertoast: ^8.0.8
-  rive_splash_screen: ^0.1.0
   lottie: ^1.2.1
+  ms_undraw: ^3.0.1+1
+  rive_splash_screen: ^0.1.0
 
 dev_dependencies:
+  build_runner: ^2.1.4
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  mockito: ^5.0.16
+  test: null
 
 flutter:
   uses-material-design: true
   assets:
-        - assets/animations/loading.json
+    - assets/animations/loading.json
